overflow-y ajouter correctement sur l'history de StatsMorpion

--- a/web/front/src/page/Stats/Stats.scss
+++ b/web/front/src/page/Stats/Stats.scss
@@ -1,8 +1,12 @@
+$root_height: 100%;
+$header_height: 15%;
+$container_height: $root_height - $header_height;
+
 .Stats-root{
     /*bg*/
     border-radius: 0.5rem;
     background-color: blueviolet;
-    height: 100%;
+    height: $root_height;
     width: 100%;
     padding: 1rem;
 
@@ -13,21 +17,28 @@
     text-align: center;
     gap: 0.5rem;
 
-    .Stats-btn{
-        background-color: rgba(0, 0, 0, 0.150);
-        border: none;
-        border-radius: 0.5rem;
-        padding: 0.5rem 1rem;
-        margin: 0.5rem;
-        cursor: pointer;
-        font-size: 1rem;
-        
-        &:hover{
-            background-color: rgba(0, 0, 0, 0.3);
+    .Stats-selection{
+
+        height: $header_height;
+
+        .Stats-btn{
+            background-color: rgba(0, 0, 0, 0.150);
+            border: none;
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            margin: 0.5rem;
+            cursor: pointer;
+            font-size: 1rem;
+            
+            &:hover{
+                background-color: rgba(0, 0, 0, 0.3);
+            }
         }
     }
-
+        
     .Stats-container{
+        height: $container_height;
+        width: 100%;
         flex: 1;
     }
 
