--- a/web/front/src/page/Stats/StatsMorpion/StatsMorpion.scss
+++ b/web/front/src/page/Stats/StatsMorpion/StatsMorpion.scss
@@ -1,93 +1,60 @@
-.StatsMorpion-parent {
-    margin-top: 1rem;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0.5rem;
-    grid-row-gap: 0px;
-}
-
-.StatsMorpion-div1 { grid-area: 1 / 1 / 2 / 2;}
-.StatsMorpion-div2 { grid-area: 1 / 2 / 2 / 3;}
-
-.StatsMorpion-div{
-    padding: 0.75rem;
-    margin: 0.5rem;
-    border: 1.5px solid;
-    border-radius: 0.5rem;
-}
-
-.border {
-    margin: 0.25rem 0rem;
-    border: 1px solid;
-    border-radius: 0.5rem;
-}
-
-.StatsMorpion-gap{
-    display: flex;
-    flex-direction: column;
-    gap: 0.1rem;
-}
-
 $width_history: 80%;
 $width_game_winrate: 100% - $width_history;
 
 .StatsMorpion-root {
-    width: 100%;
     height: 100%;
-    
     display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    align-items: center;
+    flex-direction: row;
 
-    .StatsMorpion-container {
+    .history , .game-winrate {
+        padding: 0.5rem;
+    }
 
-        flex: 1;
-        width: 100%;
+    .history {
+        padding-right: 0;
+        width: $width_history;
+        overflow-y: auto;
+        scrollbar-width: thin;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        gap: 0.5rem;
+
+    }
+    
+    .game-winrate {
+        width: $width_game_winrate;
+
+        
+        
+        
+        display: flex;
+        flex-direction: column;
         justify-content: space-between;
 
-        .history , .game-winrate {
+
+        .wl-graph, .wl-ox, .wl-horizontal,
+        .wl-diagonal, .wl-vertical {
             padding: 0.5rem;
         }
-
-        .history {
-            height: 100%;
-            width: $width_history;
-            overflow-y: auto;
-        }
         
-        .game-winrate {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            
-            .wl-graph, .wl-ox, .wl-horizontal,
-            .wl-diagonal, .wl-vertical {
-                padding: 0.5rem;
-            }
-            
-            // .wl-graph{
+        // .wl-graph{
 
-            // }
+        // }
 
-            // .wl-o-x{
+        // .wl-o-x{
 
-            // }
+        // }
 
-            // .wl-horizontal{
+        // .wl-horizontal{
 
-            // }
+        // }
 
-            // .wl-diagonal{
+        // .wl-diagonal{
 
-            // }
+        // }
 
-            // .wl-vertical{
+        // .wl-vertical{
 
-            // }
-        }
+        // }
     }
 }
