--- a/web/front/src/style/_global.scss
+++ b/web/front/src/style/_global.scss
@@ -38,3 +38,5 @@ body, #root {
     align-items: center;
     text-align: center;
 }
+
+.border{ border: 3px solid red;}
